--- a/public/locale/el.json
+++ b/public/locale/el.json
@@ -1,6 +1,6 @@
 {
 	"app.title": "",
-	"app.subtitle": "Η εξάπλωση της νόσου στην Ελλάδα.",
+	"app.subtitle": "Η εξάπλωση της νόσου στην Ελλάδα",
 	"view.greece": "Ελλάδα",
 	"view.global": "Κόσμος",
 	"link.about": "Η Εφαρμογή & τα Δεδομένα",
