--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -1,6 +1,6 @@
 {
 	"app.title": "",
-	"app.subtitle": "The spread of the disease in Greece.",
+	"app.subtitle": "The spread of the disease in Greece",
 	"view.greece": "Greece",
 	"view.global": "World",
 	"link.about": "Our App & the Data",
